--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Inconsolata', monospace;
+  font-family: 'Merriweather', serif;
   color: #ffffff;
+  background-color: #000000;
 
+/*
   background-image: url('/img/background.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+*/
 }
